scss/projects.scss
$gradient-value2: #260C5A;

#projects{
    flex-direction: column;
    height: auto;
    padding-bottom: 15px;

    h1{
        margin-top: 115px;
    }
}

.projectLine{
    height: 2px;
    width: 350px;
    background-color: white;
    margin-top: 8px;
}

.projectContainer{
    min-height: 75%;
    width: 85%;
    margin-top: 10px;
    display: flex;
    align-items: flex-start;
    justify-content: flex-start;
    flex-wrap: wrap;
}

.projectBox{
    height: 350px;
    width: 250px;
    display: flex;
    justify-content: space-between;
    flex-direction: column;
    margin: 22px;

    a{
        text-decoration: none;
    }

    a h3:hover{
        color: $gradient-value2;
    }

    h3{
        color: white;
        margin-bottom: 10px;
    }

    img{
        width: 100%;
        object-fit: cover;
    }

    p{
        color: white;
        font-size: 14px;
        text-align: left;
        width: 100%;
        margin-top: 10px;
    }
}

@media screen and (max-height: 615px){
    #projects h1{
        margin-top: 20%;
    }
}

@media screen and (max-height: 490px){
    #projects h1{
        margin-top: 40%;
    }
}

@media screen and (max-width: 560px){
    #projects h1 {
        margin-top: 260px;
    }
}

